enable style rules for all projects

--- a/src/app.helloservice/app.helloservice.csproj
+++ b/src/app.helloservice/app.helloservice.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>app.helloservice</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{737EFC20-F822-4F84-B5C3-3B9728A189E5}</ProjectGuid>
+	<CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -63,5 +64,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
   </ItemGroup>
+  <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
