--- a/src/lonos.kernel.config/lonos.kernel.config.csproj
+++ b/src/lonos.kernel.config/lonos.kernel.config.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>lonos.kernel.config</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{317E8C4B-089B-469B-8789-D76EB2F87504}</ProjectGuid>
+	<CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,5 +45,6 @@
     <Compile Include="Address.cs" />
     <Compile Include="KConfig.cs" />
   </ItemGroup>
+  <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
