--- a/src/lonos.os.core.x86/lonos.os.core.x86.csproj
+++ b/src/lonos.os.core.x86/lonos.os.core.x86.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>lonos.os.core.x86</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{BD177211-DECC-4473-B37B-883A9A58B279}</ProjectGuid>
+	<CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,5 +56,6 @@
   <ItemGroup>
     <Compile Include="Start.cs" />
   </ItemGroup>
+  <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
