--- a/src/lonos.os.loader.x86/lonos.os.loader.x86.csproj
+++ b/src/lonos.os.loader.x86/lonos.os.loader.x86.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>lonos.os.loader.x86</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{7E387209-732C-489D-A759-39D43FB21AFC}</ProjectGuid>
+	<CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,5 +56,6 @@
   <ItemGroup>
     <Compile Include="Start.cs" />
   </ItemGroup>
+  <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
