--- a/src/lonos.service.basic/lonos.service.basic.csproj
+++ b/src/lonos.service.basic/lonos.service.basic.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>lonos.service.basic</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{481DD672-7A67-43EB-B18C-88F4EA97CDF0}</ProjectGuid>
+	<CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -63,5 +64,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
   </ItemGroup>
+  <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
