--- a/src/lonos.test.console/lonos.test.console.csproj
+++ b/src/lonos.test.console/lonos.test.console.csproj
@@ -64,5 +64,6 @@
       <Name>lonos.primitives</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
