--- a/src/app.hellokernel/app.hellokernel.csproj
+++ b/src/app.hellokernel/app.hellokernel.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>app.hellokernel</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{E97F2133-634F-488C-933A-B78D6A1F0B69}</ProjectGuid>
-	<CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -75,9 +75,11 @@
   <ItemGroup />
   <ItemGroup>
     <Compile Include="HAL\Hardware.cs" />
+    <Compile Include="HAL\X86IOPortRead.cs" />
+    <Compile Include="HAL\X86IOPortReadWrite.cs" />
     <Compile Include="IOPort.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="HAL\X86IOPort.cs" />
+    <Compile Include="HAL\X86IOPortWrite.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
