--- a/src/lonos.kernel.api/lonos.kernel.api.csproj
+++ b/src/lonos.kernel.api/lonos.kernel.api.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>lonos.kernel.api</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</ProjectGuid>
-	<CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,7 +55,7 @@
     <Compile Include="IPageFrameAllocator.cs" />
     <Compile Include="Structs\Page.cs" />
     <Compile Include="Structs\Atomic.cs" />
-    <Compile Include="Extensions.cs" />
+    <Compile Include="NumberExtensions.cs" />
     <Compile Include="SystemMessage.cs" />
   </ItemGroup>
   <ItemGroup>
