--- a/src/lonos.kernel.lib/lonos.kernel.lib.csproj
+++ b/src/lonos.kernel.lib/lonos.kernel.lib.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>lonos.kernel.lib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{2D21AF60-8366-430A-9579-1B0CCD31910F}</ProjectGuid>
-	<CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -87,7 +87,7 @@
     <Compile Include="Serial.cs" />
     <Compile Include="Screen.cs" />
     <Compile Include="MemoryOperation.cs" />
-    <Compile Include="ScreenColors.cs" />
+    <Compile Include="ScreenColor.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="PageTable\PageTable.cs" />
     <Compile Include="PageTable\PageTableX86.cs" />
