--- a/src/lonos.runtime/lonos.runtime.csproj
+++ b/src/lonos.runtime/lonos.runtime.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>lonos.runtime</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{4D9C0633-1433-4A92-A148-80E8E91155FD}</ProjectGuid>
-	<CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Compile Include="ApplicationStartup.cs" />
+    <Compile Include="ApplicationRuntime.cs" />
     <Compile Include="MessageManager.cs" />
     <Compile Include="SysCalls.cs" />
   </ItemGroup>
