--- a/src/Lonos.Core.ClassLib/Lonos.Core.ClassLib.csproj
+++ b/src/Lonos.Core.ClassLib/Lonos.Core.ClassLib.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
     <RootNamespace>lonos.Kernel</RootNamespace>
-    <AssemblyName>lonos.core.classlib</AssemblyName>
+    <AssemblyName>Lonos.Core.ClassLib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{FA6E1560-C2D5-41BB-9E7C-D54D0F711918}</ProjectGuid>
     <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
