--- a/src/App.HelloService/App.HelloService.csproj
+++ b/src/App.HelloService/App.HelloService.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Exe</OutputType>
-    <RootNamespace>app.HelloService</RootNamespace>
+    <RootNamespace>App.HelloService</RootNamespace>
     <AssemblyName>App.HelloService</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{737EFC20-F822-4F84-B5C3-3B9728A189E5}</ProjectGuid>
