--- a/src/Lonos.Kernel.Api/Lonos.Kernel.Api.csproj
+++ b/src/Lonos.Kernel.Api/Lonos.Kernel.Api.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>lonos.Kernel</RootNamespace>
+    <RootNamespace>Lonos.Kernel</RootNamespace>
     <AssemblyName>Lonos.Kernel.Api</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</ProjectGuid>
