--- a/src/Lonos.Kernel.UnixApi/Lonos.Kernel.UnixApi.csproj
+++ b/src/Lonos.Kernel.UnixApi/Lonos.Kernel.UnixApi.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>lonos.Kernel</RootNamespace>
+    <RootNamespace>Lonos.Kernel</RootNamespace>
     <AssemblyName>Lonos.Kernel.UnixApi</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{1DAF7D31-54DC-4B15-A14E-15206073C579}</ProjectGuid>
