--- a/src/Lonos.OS.Core.x86/Lonos.OS.Core.x86.csproj
+++ b/src/Lonos.OS.Core.x86/Lonos.OS.Core.x86.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Exe</OutputType>
-    <RootNamespace>lonos.os.Core.x86</RootNamespace>
+    <RootNamespace>Lonos.OS.Core.x86</RootNamespace>
     <AssemblyName>Lonos.OS.Core.x86</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{BD177211-DECC-4473-B37B-883A9A58B279}</ProjectGuid>
