--- a/src/Lonos.Runtime/Lonos.Runtime.csproj
+++ b/src/Lonos.Runtime/Lonos.Runtime.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>lonos.Runtime</RootNamespace>
+    <RootNamespace>Lonos.Runtime</RootNamespace>
     <AssemblyName>Lonos.Runtime</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{4D9C0633-1433-4A92-A148-80E8E91155FD}</ProjectGuid>
