--- a/src/Lonos.Service.Basic/Lonos.Service.Basic.csproj
+++ b/src/Lonos.Service.Basic/Lonos.Service.Basic.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Exe</OutputType>
-    <RootNamespace>lonos.Service.Basic</RootNamespace>
+    <RootNamespace>Lonos.Service.Basic</RootNamespace>
     <AssemblyName>Lonos.Service.Basic</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{481DD672-7A67-43EB-B18C-88F4EA97CDF0}</ProjectGuid>
