--- a/src/Lonos.Build/Lonos.Build.csproj
+++ b/src/Lonos.Build/Lonos.Build.csproj
@@ -19,7 +19,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>..\..\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -27,6 +27,7 @@
     <Prefer32Bit>false</Prefer32Bit>
     <NoWarn>162</NoWarn>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -62,7 +63,6 @@
     <Compile Include="LonosBuilder_App.cs" />
     <Compile Include="LonosBuilder_Kernel.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LonosBuilder_Loader.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -90,10 +90,6 @@
       <Project>{317e8c4b-089b-469b-8789-d76eb2f87504}</Project>
       <Name>Lonos.Kernel.Config</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
