--- a/src/Lonos.Build/Lonos.Build.csproj
+++ b/src/Lonos.Build/Lonos.Build.csproj
@@ -58,7 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BuildUtility.cs" />
+    <Compile Include="Env.cs" />
     <Compile Include="CommandArgument.cs" />
     <Compile Include="CommandArgs.cs" />
     <Compile Include="CommandExtensions.cs" />
