--- a/src/Lonos.Runtime/Lonos.Runtime.csproj
+++ b/src/Lonos.Runtime/Lonos.Runtime.csproj
@@ -37,6 +37,14 @@
       <Project>{631BC4F3-E2D8-4319-814C-13904CAA17CE}</Project>
       <Name>Mosa.Korlib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Plug.Korlib.x86\Mosa.Plug.Korlib.x86.csproj">
+      <Project>{028bc31c-2edc-492e-90a3-3714e38ce2cf}</Project>
+      <Name>Mosa.Plug.Korlib.x86</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Plug.Korlib\Mosa.Plug.Korlib.csproj">
+      <Project>{cbdeef3c-bbe7-4655-a096-1367de069e63}</Project>
+      <Name>Mosa.Plug.Korlib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj">
       <Project>{a47b7998-4ee8-4af8-9373-c664fdeddc65}</Project>
       <Name>Mosa.Runtime.x86</Name>
