--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tools"]
 	path = tools
 	url = https://github.com/lonos-project/lonos-tools.git
+[submodule "external/gdb-dashboard"]
+	path = external/gdb-dashboard
+	url = https://github.com/cyrus-and/gdb-dashboard.git
