--- a/src/Lonos.Lib/Lonos.Lib.csproj
+++ b/src/Lonos.Lib/Lonos.Lib.csproj
@@ -4,11 +4,11 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>Lonos.Kernel</RootNamespace>
-    <AssemblyName>Lonos.Kernel.Lib</AssemblyName>
+    <RootNamespace>Lonos.Lib</RootNamespace>
+    <AssemblyName>Lonos.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <ProjectGuid>{2D21AF60-8366-430A-9579-1B0CCD31910F}</ProjectGuid>
     <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
+    <ProjectGuid>{966282D0-FC83-45B1-A523-17343F7E63B6}</ProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -37,29 +37,25 @@
       <Project>{631BC4F3-E2D8-4319-814C-13904CAA17CE}</Project>
       <Name>Mosa.Korlib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Plug.Korlib.x86\Mosa.Plug.Korlib.x86.csproj">
+      <Project>{028bc31c-2edc-492e-90a3-3714e38ce2cf}</Project>
+      <Name>Mosa.Plug.Korlib.x86</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Plug.Korlib\Mosa.Plug.Korlib.csproj">
+      <Project>{cbdeef3c-bbe7-4655-a096-1367de069e63}</Project>
+      <Name>Mosa.Plug.Korlib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj">
+      <Project>{a47b7998-4ee8-4af8-9373-c664fdeddc65}</Project>
+      <Name>Mosa.Runtime.x86</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Runtime\Mosa.Runtime.csproj">
       <Project>{77961864-DB33-4189-804F-D774022C96E2}</Project>
       <Name>Mosa.Runtime</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj">
-      <Project>{A47B7998-4EE8-4AF8-9373-C664FDEDDC65}</Project>
-      <Name>Mosa.Runtime.x86</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Lonos.Kernel.Api\Lonos.Kernel.Api.csproj">
       <Project>{ed52e867-98f0-4fbf-ab06-4812ae5ffb43}</Project>
       <Name>Lonos.Kernel.Api</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Lonos.Kernel.Config\Lonos.Kernel.Config.csproj">
-      <Project>{317e8c4b-089b-469b-8789-d76eb2f87504}</Project>
-      <Name>Lonos.Kernel.Config</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Lonos.Kernel.UnixApi\Lonos.Kernel.UnixApi.csproj">
-      <Project>{1daf7d31-54dc-4b15-a14e-15206073c579}</Project>
-      <Name>Lonos.Kernel.UnixApi</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Lonos.Lib\Lonos.Lib.csproj">
-      <Project>{966282d0-fc83-45b1-a523-17343f7e63b6}</Project>
-      <Name>Lonos.Lib</Name>
     </ProjectReference>
     <ProjectReference Include="..\Lonos.Primitives\Lonos.Primitives.csproj">
       <Project>{d61ba40b-253d-445b-a6ac-1b080aac9b80}</Project>
@@ -67,36 +63,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PageTable\IPageTable.cs" />
-    <Compile Include="PageTable\PageTableExtensions.cs" />
-    <Compile Include="PageTable\PageTableType.cs" />
-    <Compile Include="X86_EFlags.cs" />
-    <Compile Include="Elf\ElfHeader.cs" />
-    <Compile Include="Elf\ElfSectionHeader.cs" />
-    <Compile Include="Elf\ElfSymbol.cs" />
-    <Compile Include="StringBuffer.cs" />
-    <Compile Include="ApiContext.cs" />
-    <Compile Include="BufferExtensions.cs" />
-    <Compile Include="ConsoleFonts\PSF2Header.cs" />
-    <Compile Include="ConsoleFonts\PSF1Header.cs" />
-    <Compile Include="Elf\ElfHelper.cs" />
-    <Compile Include="Boot\BootInfoHeader.cs" />
-    <Compile Include="Boot\BootInfoMemory.cs" />
-    <Compile Include="Boot\BootInfoMemoryType.cs" />
-    <Compile Include="Boot\BiosMemoryType.cs" />
-    <Compile Include="GDT.cs" />
-    <Compile Include="KernelMessage.cs" />
-    <Compile Include="IKernelMessageHandler.cs" />
-    <Compile Include="Screen.cs" />
-    <Compile Include="MemoryOperation.cs" />
-    <Compile Include="ScreenColor.cs" />
-    <Compile Include="Debug.cs" />
-    <Compile Include="PageTable\PageTable.cs" />
-    <Compile Include="PageTable\PageTableX86.cs" />
-    <Compile Include="PageTable\PageTablePAE.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Structs\" />
+    <Compile Include="Allocator.cs" />
+    <Compile Include="Assert.cs" />
+    <Compile Include="BitConversion.cs" />
+    <Compile Include="KMath.cs" />
+    <Compile Include="Serial.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
