--- a/src/Lonos.Runtime/Lonos.Runtime.csproj
+++ b/src/Lonos.Runtime/Lonos.Runtime.csproj
@@ -57,6 +57,10 @@
       <Project>{ed52e867-98f0-4fbf-ab06-4812ae5ffb43}</Project>
       <Name>Lonos.Kernel.Api</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Lonos.Lib\Lonos.Lib.csproj">
+      <Project>{966282d0-fc83-45b1-a523-17343f7e63b6}</Project>
+      <Name>Lonos.Lib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Lonos.Primitives\Lonos.Primitives.csproj">
       <Project>{d61ba40b-253d-445b-a6ac-1b080aac9b80}</Project>
       <Name>Lonos.Primitives</Name>
@@ -65,7 +69,9 @@
   <ItemGroup />
   <ItemGroup>
     <Compile Include="ApplicationRuntime.cs" />
+    <Compile Include="RuntimeAllocator.cs" />
     <Compile Include="MessageManager.cs" />
+    <Compile Include="RuntimeMemory.cs" />
     <Compile Include="SysCalls.cs" />
   </ItemGroup>
   <Import Project="..\ressources\SharedProjectSettings.targets" />
