--- a/src/Lonos.Service.HostCommunication/Lonos.Service.HostCommunication.csproj
+++ b/src/Lonos.Service.HostCommunication/Lonos.Service.HostCommunication.csproj
@@ -4,8 +4,8 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Lonos.Service.Basic</RootNamespace>
-    <AssemblyName>Lonos.Service.Basic</AssemblyName>
+    <RootNamespace>Lonos.Service.HostCommunication</RootNamespace>
+    <AssemblyName>Lonos.Service.HostCommunication</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{00CA4A2D-482C-4733-86F9-E6286D925664}</ProjectGuid>
     <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
@@ -55,6 +55,10 @@
     <ProjectReference Include="..\Lonos.Kernel.Api\Lonos.Kernel.Api.csproj">
       <Project>{ed52e867-98f0-4fbf-ab06-4812ae5ffb43}</Project>
       <Name>Lonos.Kernel.Api</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lonos.Lib\Lonos.Lib.csproj">
+      <Project>{966282d0-fc83-45b1-a523-17343f7e63b6}</Project>
+      <Name>Lonos.Lib</Name>
     </ProjectReference>
     <ProjectReference Include="..\Lonos.Primitives\Lonos.Primitives.csproj">
       <Project>{d61ba40b-253d-445b-a6ac-1b080aac9b80}</Project>
