--- a/src/Lonos.Tools.HostCommunication/Lonos.Tools.HostCommunication.csproj
+++ b/src/Lonos.Tools.HostCommunication/Lonos.Tools.HostCommunication.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1FD40B51-3A6F-41DC-83D3-3309CA059797}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Lonos.Tools.HostServer</RootNamespace>
-    <AssemblyName>Lonos.Tools.HostServer</AssemblyName>
+    <RootNamespace>Lonos.Tools.HostCommunication</RootNamespace>
+    <AssemblyName>Lonos.Tools.HostCommunication</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
