--- a/src/Lonos.Kernel.Api/Lonos.Kernel.Api.csproj
+++ b/src/Lonos.Kernel.Api/Lonos.Kernel.Api.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Structs\Page.cs" />
     <Compile Include="Structs\Atomic.cs" />
     <Compile Include="NumberExtensions.cs" />
+    <Compile Include="InterruptMessage.cs" />
     <Compile Include="SystemMessage.cs" />
   </ItemGroup>
   <ItemGroup>
