--- a/src/Lonos.Runtime/Lonos.Runtime.csproj
+++ b/src/Lonos.Runtime/Lonos.Runtime.csproj
@@ -69,6 +69,7 @@
   <ItemGroup />
   <ItemGroup>
     <Compile Include="ApplicationRuntime.cs" />
+    <Compile Include="Console.cs" />
     <Compile Include="RuntimeAllocator.cs" />
     <Compile Include="RuntimeMemory.cs" />
   </ItemGroup>
