--- a/src/Lonos.Primitives/Lonos.Primitives.csproj
+++ b/src/Lonos.Primitives/Lonos.Primitives.csproj
@@ -57,6 +57,7 @@
     <Compile Include="BitMask64.cs" />
     <Compile Include="BitsMask.cs" />
     <Compile Include="FNVHash.cs" />
+    <Compile Include="list_head.cs" />
     <Compile Include="NullTerminatedString.cs" />
     <Compile Include="SSize.cs" />
     <Compile Include="USize.cs" />
